Completed V1 of PatchTST +-5% Strain

--- a/notebooks/test_dataset.ipynb
+++ b/notebooks/test_dataset.ipynb
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "4a98f6f9-0d00-4e0f-919b-7cd000e109db",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔹 Selective Threshold Test (E5–E6 ±10%, E1–E4 ±5%)\n",
+      "Selective Threshold Test (E5–E6 ±10%, E1–E4 ±5%)\n",
       "Samples loaded: 1848\n",
       "Example shape: Input (1800, 11), Target (1800, 6)\n"
      ]
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 26,
    "id": "7ebd24c8-6399-404a-80ba-50629a1e8897",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
      "text": [
       "Checked 1848 samples with selective thresholds.\n",
       "Violating samples found: 0\n",
-      "✅ All strain values comply with their respective thresholds.\n"
+      "All strain values comply with their respective thresholds.\n"
      ]
     }
    ],
@@ -783,9 +783,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4dbb14ca-5a34-45a4-b2f3-eab5da666f47",
+   "metadata": {},
+   "source": [
+    "### 🧪 Sanity Check: Dataset Splitting Logic\n",
+    "\n",
+    "We verify that the train/val split logic correctly:\n",
+    "- Loads mutually exclusive subsets\n",
+    "- Maintains consistent splits across runs (via fixed seed)\n",
+    "- Covers the full dataset without overlap\n",
+    "\n",
+    "This test uses:\n",
+    "- `split='train'` and `split='val'` with the same `split_ratio` and `seed`\n",
+    "- Set operations to check overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c69825b5-22cd-42a0-a365-0bdc05f913a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total samples     : 1848\n",
+      "Train set size    : 1478\n",
+      "Validation set size: 370\n",
+      "Overlap detected  : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataloader import get_dataloader\n",
+    "\n",
+    "# Constants\n",
+    "INPUT_CSV = \"../data/IM78552_DATABASEInput.csv\"\n",
+    "DATA_DIR = \"../data/_CSV\"\n",
+    "BATCH_SIZE = 32\n",
+    "MAX_SEQ_LEN = 1800\n",
+    "SPLIT_RATIO = 0.8\n",
+    "SEED = 42\n",
+    "\n",
+    "# Load train and val loaders with same seed\n",
+    "train_loader = get_dataloader(INPUT_CSV, DATA_DIR, MAX_SEQ_LEN, BATCH_SIZE, split='train', split_ratio=SPLIT_RATIO, seed=SEED)\n",
+    "val_loader   = get_dataloader(INPUT_CSV, DATA_DIR, MAX_SEQ_LEN, BATCH_SIZE, split='val',   split_ratio=SPLIT_RATIO, seed=SEED)\n",
+    "\n",
+    "# Get sample indices from Subset objects\n",
+    "train_indices = set(train_loader.dataset.indices)\n",
+    "val_indices   = set(val_loader.dataset.indices)\n",
+    "\n",
+    "# Sanity checks\n",
+    "print(f\"Total samples     : {len(train_indices | val_indices)}\")\n",
+    "print(f\"Train set size    : {len(train_indices)}\")\n",
+    "print(f\"Validation set size: {len(val_indices)}\")\n",
+    "print(f\"Overlap detected  : {len(train_indices & val_indices)}\")\n",
+    "\n",
+    "# Expect:\n",
+    "# - Total = Full dataset\n",
+    "# - Overlap = 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4409f2f2-7750-4e6f-8e05-6124c1bbd058",
+   "id": "44b959f1-50f4-4efa-863d-030eaf9e43a2",
    "metadata": {},
    "outputs": [],
    "source": []
