--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1820,9 +1820,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:composite-transformer]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-composite-transformer-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1834,7 +1834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
